Added some meta data

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+
+    <meta property="og:title" content="Daniel Tuttle">
+    <meta property="og:description" content="✨Daniel✨ The story of me.">
+    <meta property="og:image" content="https://s3.eu-central-1.amazonaws.com/danielptuttle.com/static/dont-erase/daniel.png">
+    <meta property="og:url" content="http://danielptuttle.com">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
